# Image-Classification-With-Transfer-Learning

./: .gitignore  QUICKSTART.md  README.md  comparison_notebook.ipynb  datasets_utils.py  pyproject.toml  requirements.txt  transfer_learning.ipynb
runs/run-20251125-121143/: changes.md
runs/run-20251125-150335/: changes.md
runs/run-20251125-151512/: changes.md
runs/run-20251207-131237/: changes.md
runs/run-20251207-151426/: changes.md
